--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>broadway</title>
-    <link href="C:\Users\GURUSAMY\Desktop\broadway\css\style.css" type="text/css" rel="stylesheet">
+    <link href="../broadway\css\style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="bg">
